manifests/argocd/lightspeed-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: application-server
    app.kubernetes.io/managed-by: lightspeed-operator
    app.kubernetes.io/name: lightspeed-service-api
    app.kubernetes.io/part-of: openshift-lightspeed
  name: lightspeed-app-server
  namespace: openshift-lightspeed
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: lightspeed-app-server
    weight: 100
  wildcardPolicy: None
